objects/Error_Log__c.object
<CustomObject>
    <description>This object will fetch all of the errors.</description>
    <fields>
        <fullName>Log_Date_Time__c</fullName>
        <description>This field will display what is the date and time when the error occurred.</description>
        <inlineHelpText>This field will display what is the date and time when the error occurred.</inlineHelpText>
        <label>Log Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Details__c</fullName>
        <description>This field will display the complete stack track about the error/problem.</description>
        <inlineHelpText>This field will display the complete stack track about the error/problem.</inlineHelpText>
        <label>Log Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>This is the name of either Apex class or Apex trigger.</description>
        <inlineHelpText>This is the name of either Apex class or Apex trigger.</inlineHelpText>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Err-{00000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>